plp3Parser.java
// $ANTLR 3.4 plp3.g 2013-02-23 14:02:48

	import java.lang.String;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class plp3Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDOP", "AND", "ASIG", "BLANCOS", "BOOL", "BOOLEANO", "BREAK", "CLASS", "COMA", "COMENTARIO", "CONTINUE", "CORD", "CORI", "DOUBLE", "ELSE", "ENTERO", "FOR", "FOREACH", "ID", "IF", "IN", "INT", "LLAVED", "LLAVEI", "MAIN", "MULOP", "NEW", "NOT", "OR", "PARD", "PARI", "PUBLIC", "PUNTO", "PYC", "READLINE", "REAL", "RELOP", "SINGLE", "STATIC", "STEP", "TO", "VAR", "VOID", "WHILE", "WRITELINE"
    };

    public static final int EOF=-1;
    public static final int ADDOP=4;
    public static final int AND=5;
    public static final int ASIG=6;
    public static final int BLANCOS=7;
    public static final int BOOL=8;
    public static final int BOOLEANO=9;
    public static final int BREAK=10;
    public static final int CLASS=11;
    public static final int COMA=12;
    public static final int COMENTARIO=13;
    public static final int CONTINUE=14;
    public static final int CORD=15;
    public static final int CORI=16;
    public static final int DOUBLE=17;
    public static final int ELSE=18;
    public static final int ENTERO=19;
    public static final int FOR=20;
    public static final int FOREACH=21;
    public static final int ID=22;
    public static final int IF=23;
    public static final int IN=24;
    public static final int INT=25;
    public static final int LLAVED=26;
    public static final int LLAVEI=27;
    public static final int MAIN=28;
    public static final int MULOP=29;
    public static final int NEW=30;
    public static final int NOT=31;
    public static final int OR=32;
    public static final int PARD=33;
    public static final int PARI=34;
    public static final int PUBLIC=35;
    public static final int PUNTO=36;
    public static final int PYC=37;
    public static final int READLINE=38;
    public static final int REAL=39;
    public static final int RELOP=40;
    public static final int SINGLE=41;
    public static final int STATIC=42;
    public static final int STEP=43;
    public static final int TO=44;
    public static final int VAR=45;
    public static final int VOID=46;
    public static final int WHILE=47;
    public static final int WRITELINE=48;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public plp3Parser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public plp3Parser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return plp3Parser.tokenNames; }
    public String getGrammarFileName() { return "plp3.g"; }


    	tablaSimbolos tS;
    	public void emitErrorMessage(String msg) {
    		System.err.println(msg);
    		System.exit(1);
    	}



    // $ANTLR start "s"
    // plp3.g:403:1: s[String archivo] returns [String resultado] : clase ;
    public final String s(String archivo) throws RecognitionException {
        String resultado = null;


        String clase1 =null;


        try {
            // plp3.g:404:2: ( clase )
            // plp3.g:404:4: clase
            {
            tS = new tablaSimbolos();

            pushFollow(FOLLOW_clase_in_s67);
            clase1=clase();

            state._fsp--;


            resultado = ".assembly extern mscorlib {}\n" + ".assembly '" + archivo + "' {}\n" + clase1;

            }

        }

        	catch (RecognitionException re) {
        		reportError(re);
        		System.exit(1);
        	}catch (Exception e) {
        //		e.printStackTrace();
        		System.err.println(e);
        		System.exit(1);
        	}

        finally {
        	// do for sure before leaving
        }
        return resultado;
    }
    // $ANTLR end "s"



    // $ANTLR start "clase"
    // plp3.g:406:1: clase returns [String trad] : CLASS SINGLE LLAVEI metodo LLAVED ;
    public final String clase() throws RecognitionException {
        String trad = null;


        String metodo2 =null;


        try {
            // plp3.g:407:2: ( CLASS SINGLE LLAVEI metodo LLAVED )
            // plp3.g:407:4: CLASS SINGLE LLAVEI metodo LLAVED
            {
            match(input,CLASS,FOLLOW_CLASS_in_clase81); 

            match(input,SINGLE,FOLLOW_SINGLE_in_clase83); 

            match(input,LLAVEI,FOLLOW_LLAVEI_in_clase85); 

            trad =".class 'Single' extends [mscorlib]System.Object \n{\n";

            pushFollow(FOLLOW_metodo_in_clase89);
            metodo2=metodo();

            state._fsp--;


            trad+=metodo2 + "\n}";

            match(input,LLAVED,FOLLOW_LLAVED_in_clase93); 

            }

        }

        	catch (RecognitionException re) {
        		reportError(re);
        		System.exit(1);
        	}catch (Exception e) {
        //		e.printStackTrace();
        		System.err.println(e);
        		System.exit(1);
        	}

        finally {
        	// do for sure before leaving
        }
        return trad;
    }
    // $ANTLR end "clase"



    // $ANTLR start "metodo"
    // plp3.g:409:1: metodo returns [String trad] : PUBLIC STATIC VOID MAIN PARI PARD bloque ;
    public final String metodo() throws RecognitionException {
        String trad = null;


        String bloque3 =null;


        try {
            // plp3.g:410:2: ( PUBLIC STATIC VOID MAIN PARI PARD bloque )
            // plp3.g:410:4: PUBLIC STATIC VOID MAIN PARI PARD bloque
            {
            match(input,PUBLIC,FOLLOW_PUBLIC_in_metodo106); 

            match(input,STATIC,FOLLOW_STATIC_in_metodo108); 

            match(input,VOID,FOLLOW_VOID_in_metodo110); 

            match(input,MAIN,FOLLOW_MAIN_in_metodo112); 

            match(input,PARI,FOLLOW_PARI_in_metodo114); 

            match(input,PARD,FOLLOW_PARD_in_metodo116); 

            pushFollow(FOLLOW_bloque_in_metodo118);
            bloque3=bloque();

            state._fsp--;


            trad = ".method static public void main () cil managed \n{\n.locals()\n.entrypoint\n.maxstack 1000\n"+bloque3+"\n ret\n}";

            }

        }

        	catch (RecognitionException re) {
        		reportError(re);
        		System.exit(1);
        	}catch (Exception e) {
        //		e.printStackTrace();
        		System.err.println(e);
        		System.exit(1);
        	}

        finally {
        	// do for sure before leaving
        }
        return trad;
    }
    // $ANTLR end "metodo"



    // $ANTLR start "tipoSimple"
    // plp3.g:412:1: tipoSimple returns [String trad] : ( INT | DOUBLE | BOOL );
    public final String tipoSimple() throws RecognitionException {
        String trad = null;


        try {
            // plp3.g:413:2: ( INT | DOUBLE | BOOL )
            int alt1=3;
            switch ( input.LA(1) ) {
            case INT:
                {
                alt1=1;
                }
                break;
            case DOUBLE:
                {
                alt1=2;
                }
                break;
            case BOOL:
                {
                alt1=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;

            }

            switch (alt1) {
                case 1 :
                    // plp3.g:413:4: INT
                    {
                    match(input,INT,FOLLOW_INT_in_tipoSimple132); 

                    trad = "int32";

                    }
                    break;
                case 2 :
                    // plp3.g:414:4: DOUBLE
                    {
                    match(input,DOUBLE,FOLLOW_DOUBLE_in_tipoSimple139); 

                    trad = "float64";

                    }
                    break;
                case 3 :
                    // plp3.g:415:4: BOOL
                    {
                    match(input,BOOL,FOLLOW_BOOL_in_tipoSimple146); 

                    trad ="bool";

                    }
                    break;

            }
        }

        	catch (RecognitionException re) {
        		reportError(re);
        		System.exit(1);
        	}catch (Exception e) {
        //		e.printStackTrace();
        		System.err.println(e);
        		System.exit(1);
        	}

        finally {
        	// do for sure before leaving
        }
        return trad;
    }
    // $ANTLR end "tipoSimple"



    // $ANTLR start "decl"
    // plp3.g:417:1: decl returns [String trad] : tipoSimple primervarid= varid[$tipoSimple.trad] ( COMA nuevovarid= varid[$tipoSimple.trad] )* PYC ;
    public final String decl() throws RecognitionException {
        String trad = null;


        plp3Parser.varid_return primervarid =null;

        plp3Parser.varid_return nuevovarid =null;

        String tipoSimple4 =null;


        try {
            // plp3.g:418:2: ( tipoSimple primervarid= varid[$tipoSimple.trad] ( COMA nuevovarid= varid[$tipoSimple.trad] )* PYC )
            // plp3.g:418:4: tipoSimple primervarid= varid[$tipoSimple.trad] ( COMA nuevovarid= varid[$tipoSimple.trad] )* PYC
            {
            pushFollow(FOLLOW_tipoSimple_in_decl162);
            tipoSimple4=tipoSimple();

            state._fsp--;


            pushFollow(FOLLOW_varid_in_decl168);
            primervarid=varid(tipoSimple4);

            state._fsp--;



            		tS.add((primervarid!=null?primervarid.trad:null),(primervarid!=null?primervarid.resultado:null));

            		trad = ".locals(" + (primervarid!=null?primervarid.resultado:null);
            	

            // plp3.g:422:3: ( COMA nuevovarid= varid[$tipoSimple.trad] )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COMA) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // plp3.g:422:4: COMA nuevovarid= varid[$tipoSimple.trad]
            	    {
            	    match(input,COMA,FOLLOW_COMA_in_decl173); 

            	    pushFollow(FOLLOW_varid_in_decl179);
            	    nuevovarid=varid(tipoSimple4);

            	    state._fsp--;


            	    trad+=", " + tipoSimple4+ " '" + (nuevovarid!=null?nuevovarid.trad:null) + "'";tS.add((nuevovarid!=null?nuevovarid.trad:null),(nuevovarid!=null?nuevovarid.resultado:null));

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            match(input,PYC,FOLLOW_PYC_in_decl187); 

            trad += ")";

            }

        }

        	catch (RecognitionException re) {
        		reportError(re);
        		System.exit(1);
        	}catch (Exception e) {
        //		e.printStackTrace();
        		System.err.println(e);
        		System.exit(1);
        	}

        finally {
        	// do for sure before leaving
        }
        return trad;
    }
    // $ANTLR end "decl"


    public static class varid_return extends ParserRuleReturnScope {
        public String trad;
        public Tipo resultado;
    };


    // $ANTLR start "varid"
    // plp3.g:425:1: varid[String tipo] returns [String trad, Tipo resultado] : ID ( CORI ( COMA )* CORD )? ;
    public final plp3Parser.varid_return varid(String tipo) throws RecognitionException {
        plp3Parser.varid_return retval = new plp3Parser.varid_return();
        retval.start = input.LT(1);


        Token ID5=null;

        try {
            // plp3.g:426:2: ( ID ( CORI ( COMA )* CORD )? )
            // plp3.g:426:4: ID ( CORI ( COMA )* CORD )?
            {
            ID5=(Token)match(input,ID,FOLLOW_ID_in_varid204); 

            retval.trad = (ID5!=null?ID5.getText():null);retval.resultado = new Tipo(tipo,0,null);

            // plp3.g:426:63: ( CORI ( COMA )* CORD )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==CORI) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // plp3.g:426:64: CORI ( COMA )* CORD
                    {
                    match(input,CORI,FOLLOW_CORI_in_varid209); 

                    retval.resultado = new Tipo("array",0,retval.resultado);

                    // plp3.g:426:115: ( COMA )*
                    loop3:
                    do {
                        int alt3=2;
                        int LA3_0 = input.LA(1);

                        if ( (LA3_0==COMA) ) {
                            alt3=1;
                        }


                        switch (alt3) {
                    	case 1 :
                    	    // plp3.g:426:116: COMA
                    	    {
                    	    match(input,COMA,FOLLOW_COMA_in_varid213); 

                    	    retval.resultado = new Tipo("array",0,retval.resultado);

                    	    }
                    	    break;

                    	default :
                    	    break loop3;
                        }
                    } while (true);


                    match(input,CORD,FOLLOW_CORD_in_varid218); 

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


        }

        	catch (RecognitionException re) {
        		reportError(re);
        		System.exit(1);
        	}catch (Exception e) {
        //		e.printStackTrace();
        		System.err.println(e);
        		System.exit(1);
        	}

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "varid"



    // $ANTLR start "declins"
    // plp3.g:428:1: declins returns [String trad] : ( instr | decl )* ;
    public final String declins() throws RecognitionException {
        String trad = null;


        String instr6 =null;

        String decl7 =null;


        try {
            // plp3.g:429:2: ( ( instr | decl )* )
            // plp3.g:429:4: ( instr | decl )*
            {
            trad = "";

            // plp3.g:429:17: ( instr | decl )*
            loop5:
            do {
                int alt5=3;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==BREAK||LA5_0==CONTINUE||(LA5_0 >= FOR && LA5_0 <= IF)||LA5_0==LLAVEI||(LA5_0 >= WHILE && LA5_0 <= WRITELINE)) ) {
                    alt5=1;
                }
                else if ( (LA5_0==BOOL||LA5_0==DOUBLE||LA5_0==INT) ) {
                    alt5=2;
                }


                switch (alt5) {
            	case 1 :
            	    // plp3.g:429:18: instr
            	    {
            	    pushFollow(FOLLOW_instr_in_declins235);
            	    instr6=instr();

            	    state._fsp--;


            	    trad += instr6 + "\n";

            	    }
            	    break;
            	case 2 :
            	    // plp3.g:429:56: decl
            	    {
            	    pushFollow(FOLLOW_decl_in_declins240);
            	    decl7=decl();

            	    state._fsp--;


            	    trad += decl7+ "\n";
            	    	// ==========================================================	
            	    		System.out.println("tS = "+tS.getAll());
            	    	// ==========================================================		
            	    		

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }

        	catch (RecognitionException re) {
        		reportError(re);
        		System.exit(1);
        	}catch (Exception e) {
        //		e.printStackTrace();
        		System.err.println(e);
        		System.exit(1);
        	}

        finally {
        	// do for sure before leaving
        }
        return trad;
    }
    // $ANTLR end "declins"



    // $ANTLR start "bloque"
    // plp3.g:435:1: bloque returns [String trad] : LLAVEI declins LLAVED ;
    public final String bloque() throws RecognitionException {
        String trad = null;


        String declins8 =null;


        try {
            // plp3.g:436:2: ( LLAVEI declins LLAVED )
            // plp3.g:436:4: LLAVEI declins LLAVED
            {
            tS = new tablaSimbolos(tS);

            match(input,LLAVEI,FOLLOW_LLAVEI_in_bloque257); 

            pushFollow(FOLLOW_declins_in_bloque259);
            declins8=declins();

            state._fsp--;


            match(input,LLAVED,FOLLOW_LLAVED_in_bloque261); 

            trad = declins8;tS = tS.pop();

            }

        }

        	catch (RecognitionException re) {
        		reportError(re);
        		System.exit(1);
        	}catch (Exception e) {
        //		e.printStackTrace();
        		System.err.println(e);
        		System.exit(1);
        	}

        finally {
        	// do for sure before leaving
        }
        return trad;
    }
    // $ANTLR end "bloque"



    // $ANTLR start "instr"
    // plp3.g:438:1: instr returns [String trad] : ( bloque | IF PARI expr PARD instr ( ELSE instr )? | WHILE PARI expr PARD instr | FOREACH PARI VAR ID IN ID PARD instr | FOR PARI INT ID ASIG expr TO expr STEP ( ADDOP )? ENTERO PARD instr | BREAK PYC | CONTINUE PYC | ref cambio | ID ASIG NEW tipoSimple CORI dims CORD PYC | WRITELINE PARI expr PARD PYC );
    public final String instr() throws RecognitionException {
        String trad = null;


        String bloque9 =null;

        plp3Parser.expr_return expr10 =null;

